# python-sota-starter-pack

./: .cookiecutterrc.example  LICENSE  QUICKSTART.md  README.md  TEMPLATE_STRUCTURE.md  cookiecutter.json  generate.py  pyproject.toml  requirements.txt  run_tests.py  run_tests.sh
hooks/: post_gen_project.py  pre_gen_project.py
tests/: __init__.py  conftest.py  test_e2e.py  test_e2e_all.py  test_e2e_api.py  test_e2e_datascience.py  test_e2e_library.py  test_e2e_webapp.py
{{cookiecutter.project_slug}}/: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  CHANGELOG.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml  sonar-project.properties
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/: api.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  core.py  main.py
{{cookiecutter.project_slug}}/tests/: __init__.py  test_api.py  test_core.py  test_main.py  test_streamlit.py
