[project]
name = "python-sota-starter-pack"
version = "0.1.0"
description = "A modern Python project template using Cookiecutter"
readme = "README.md"

dependencies = [
    "cookiecutter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]
